fixed twitter bug on mobile

--- a/css/css.css
+++ b/css/css.css
@@ -25,7 +25,6 @@
 
 { 
       width: 90% !important;
-      height: 30%;
 }
 
 #twitter-widget-0.tweet  
