--- a/css/responsive.css
+++ b/css/responsive.css
@@ -21,8 +21,7 @@
 #twitter-widget-0 
 
 { 
-      width: 100% !important;
-      height: 30%; 
+      width: 100% !important; 
 }
 
 #twitter-widget-0.tweet  
